fix border bottom post on mobile

--- a/frontend/web/less/mobile/post.less
+++ b/frontend/web/less/mobile/post.less
@@ -332,9 +332,7 @@
                 background: #fff;
                 width: 100%;
                 height: auto;
-                margin-bottom: 5px;
-                border: 1px solid #eee;
-                box-shadow: 0px 0px 10px #888;
+                border-bottom: 1px solid #e3e3e3;
                 float: left;
                 .users_avatar{
                     width: 30%;
